tmp/k3d/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-nodeport
  labels:
    app: httpbin
spec:
  ports:
  - name: 80-80
    nodePort: 30080
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpbin
  type: NodePort
