tmp/k3d/ingress-clusterip.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-clusterip
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin-clusterip
            port:
              number: 80
